--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@picocss/pico": "^2.1.1",
     "vue": "^3.5.18"
   },
   "devDependencies": {
