--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@picocss/pico": "^2.1.1",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
